# OnlineVotingSystem

./: .gitignore  AadharDetails.1cpp  AadharDetails.cpp  AadharDetails.h  Assembly.cpp  Assembly.h  CMakeLists.txt  Candidate.cpp  Candidate.h  Election.cpp  Election.h  ElectionComission.cpp  ElectionCommision.cpp  ElectionCommision.h  Person.cpp  Person.h  State.cpp  State.h  Voter.cpp  Voter.h  a.out  main  main.cpp  staticexe  tables.1cpp  test.db
